# dardesh

./: .env  Cargo.toml
data/: db.db
entity/: Cargo.toml
entity/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240220_124003_create_rooms.rs  m20240220_125036_create_countries.rs  m20240220_125239_create_users.rs  m20240220_125320_create_messages.rs  m20240220_130646_create_user_room.rs
server/: Cargo.toml
server/src/: main.rs
server/src/consts/: mod.rs
server/src/db/: mod.rs
