[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = {version = "1.1.0", features = ["tokio", "openssl", "compress"]}
sea-orm = {version = "1.0.0-rc.1", features = ["sqlx-sqlite", "with-chrono", "macros", "with-uuid", "with-json"]}
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
entity = { path = "../entity" }
migration = { path = "../migration" }
bb8 = "0.8.3"
log = "0.4.20"
cipher = { path = "../cipher" }
